--- a/templates/ajax/soul/badges.html.twig
+++ b/templates/ajax/soul/badges.html.twig
@@ -1,7 +1,10 @@
 {#  @var bagder \App\Entity\User #}
 <div class="cell rw-12 center night">
-    {% if badger.activeTitle is not null %}
-        <div class="badge-title">{{ badger.activeTitle.prototype.title|trans({},'game') }}</div><br />
+    {% if badger.activeTitle or badger.activeIcon %}
+        <div class="badge-title">
+            {% if badger.activeIcon %}<img alt="" src="{{ asset('build/images/icons/title/' ~ badger.activeIcon.prototype.icon ~ '.gif') }}" />{% endif %}
+            {% if badger.activeTitle %}<span>{{ badger.activeTitle.prototype.title|trans({},'game') }}</span>{% endif %}
+        </div><br />
     {% endif %}
 
     {% if user_handler.hasRole(badger, "ROLE_ADMIN") %}
