--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -111,6 +111,8 @@ div.tooltip.badge-tooltip {
           background: fade(@myhordes-badge-color,60%); outline: 1px solid lighten(@myhordes-badge-color,10%);
           padding: 3px 24px; display: inline-block; box-shadow: 0 0 5px rgba(0,0,0,0.9); text-shadow: 0 0 5px black;
           font-weight: bold;
+          &>img { margin-right: 8px; }
+          &>span {vertical-align: middle; }
         }
 
         &>.badge {
