Add personal description Add more options for account restriction (WIP)

--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -7,6 +7,16 @@ div.tooltip.badge-tooltip {
     &>b { display: block; font-size: 1.2em; border-bottom: 1px solid wheat; color: wheat; margin-bottom: 3px; }
 }
 
+.personal_desc {
+  color: #f0d79e; background: url("../../img/icons/small_rp.gif") no-repeat 4px 1px, #996739; padding: 1px 1px 3px 25px; font-style: italic;
+  font-size: 0.8em;
+  &>div:first-child {
+    margin-bottom: 5px; color: #ddab76; border-bottom: 2px solid #ddab76; text-transform: uppercase;
+    font-weight: bold;
+  }
+  &>div:last-child > p { display: inline; margin: 0; }
+}
+
 #users-list-soul, #pm-users-list-container, #pm-add-users-list-container {
     position: relative; overflow: visible;
     #users-list, #pm-users-list, #pm-add-users-list {
