--- a/templates/ajax/soul/settings.html.twig
+++ b/templates/ajax/soul/settings.html.twig
@@ -45,7 +45,7 @@
                         {% for award in app.user.awards %}
                             {% if award.prototype is not null and award.prototype.icon is not null %}
                                 {% set has_icon = true %}
-                                <img class="pointer" x-title-icon="{{ award.id }}" alt="" src="{{ asset('build/images/icons/title/' ~ award.prototype.icon ~ '.gif') }}" />
+                                <img {% if app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionProfileTitle')) and app.user.activeIcon != award %}disabled{% endif %} class="pointer" x-title-icon="{{ award.id }}" alt="" src="{{ asset('build/images/icons/title/' ~ award.prototype.icon ~ '.gif') }}" />
                             {% endif %}
                         {% endfor %}
                         {% if has_icon %}
@@ -66,10 +66,20 @@
                         <option {% if app.user.activeTitle is null %}selected{% endif %} value="-1">--- {{ 'Kein Titel'|trans({},'soul') }} ---</option>
                         {% for award in app.user.awards %}
                             {% if award.prototype is not null and award.prototype.title is not null %}
-                                <option {% if app.user.activeTitle == award %}selected{% endif %} value="{{ award.id }}">{{ award.prototype.title|trans({},'game') }}</option>
+                                <option {% if app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionProfileTitle')) and app.user.activeTitle != award %}disabled{% endif %} {% if app.user.activeTitle == award %}selected{% endif %} value="{{ award.id }}">{{ award.prototype.title|trans({},'game') }}</option>
                             {% endif %}
                         {% endfor %}
                     </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="padded cell rw-3 rw-md-4 rw-sm-12">
+                    <div class="note note-lightest">
+                        <label for="user_desc">{{ 'Deine Beschreibung'|trans({}, 'global') }}</label>
+                    </div>
+                </div>
+                <div class="padded cell rw-9 rw-md-8 rw-sm-12">
+                    <textarea id="user_desc" style="min-height: 100px;"></textarea>
                 </div>
             </div>
             <div class="row">
@@ -77,6 +87,8 @@
                     <button id="save_profile_header">{{ 'Speichern'|trans({},'global') }}</button>
                 </div>
             </div>
+
+            <h5>{{ 'Dein Avatar'|trans({},'soul') }}</h5>
             <div class="row">
                 <div class="padded cell rw-3 rw-md-4 rw-sm-12">
                     <div class="note note-lightest">
@@ -121,11 +133,11 @@
                             <input class="hidden" type="file" id="avatar_file_select" accept=".gif,.jpg,.jpeg,.jif,.jfif,.png,.webp,.bmp">
 
                             {% if app.user.avatar is not null %}
-                                <label class="button" for="avatar_file_select">{{ 'Neues Profilbild hochladen'|trans({},'soul') }}</label>
+                                <label {% if app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionProfileAvatar')) %}disabled{% endif %} class="button" for="avatar_file_select">{{ 'Neues Profilbild hochladen'|trans({},'soul') }}</label>
                                 <button id="avatar_del">{{ 'Profilbild löschen'|trans({},'soul') }}</button>
 
                                 {% if not app.user.avatar.classic %}
-                                    <button class="hide-mobile" id="avatar_com" x-avatar-com-toggle>{{ 'Komprimierte Anzeige bearbeiten'|trans({},'soul') }}</button>
+                                    <button {% if app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionProfileAvatar')) %}disabled{% endif %} class="hide-mobile" id="avatar_com" x-avatar-com-toggle>{{ 'Komprimierte Anzeige bearbeiten'|trans({},'soul') }}</button>
                                     <div id="avatar_com_edit" class="row hidden hide-mobile">
                                         <div class="padded cell rw-6">
                                             <div class="help">
@@ -149,7 +161,7 @@
 
                                 {% endif %}
                             {% else %}
-                                <label class="button" for="avatar_file_select">{{ 'Profilbild hochladen'|trans({},'soul') }}</label>
+                                <label {% if app.user|restricted(constant('App\\Entity\\AccountRestriction::RestrictionProfileAvatar')) %}disabled{% endif %} class="button" for="avatar_file_select">{{ 'Profilbild hochladen'|trans({},'soul') }}</label>
                             {% endif %}
                         </div>
                     </div>
@@ -537,7 +549,8 @@
         $.html.addEventListenerAll('#save_profile_header', 'click', () => {
             $.ajax.easySend('{{ path('api_soul_header')|e('js') }}', {
                 title: parseInt(document.getElementById('user_title').value),
-                icon: parseInt(document.getElementById('user_icon').value)
+                icon: parseInt(document.getElementById('user_icon').value),
+                desc: $.html.twinoParser.parseToString(document.getElementById('user_desc').value, s => [null,s])
             }, () => {
                 $.html.notice('{{ 'Deine Einstellung wurde gespeichert.'|trans({},'soul')|e('js') }}');
                 $.ajax.load(null, '{{ path('soul_settings')|e('js') }}');
@@ -566,5 +579,6 @@
             document.getElementById('show_icon_sel').style.display = null;
             document.getElementById('icon_sel').style.display = 'none';
         });
+        document.getElementById('user_desc').value = $.html.twinoParser.parseFrom('{{ user_desc|e('js') }}', $.html.twinoParser.OpModeRaw);
     </script>
 {% endblock %}
