--- a/templates/ajax/soul/settings.html.twig
+++ b/templates/ajax/soul/settings.html.twig
@@ -114,7 +114,7 @@
                             {% endif %}
                         </div>
                         <div class="padded cell rw-9 rw-lg-8 rw-md-12">
-                            {% if not app.user.avatar.classic %}
+                            {% if app.user.avatar is not null and not app.user.avatar.classic %}
                                 <div class="hide-md hide-sm">
                                     <span class="small">{{ 'Komprimierte Anzeige'|trans({},'soul') }}</span><br />
                                     <div class="avatar small no-arma">
