--- a/assets/less/modules/ghost.less
+++ b/assets/less/modules/ghost.less
@@ -1,3 +1,15 @@
 .town-row {
 	font-size: 1.2rem;
 }
+
+#save-spots-container {
+  div.town-reserved-spot {
+    display: inline-block; padding: 1px 4px; font-size: 0.8em; background: #5c2b20; border: 1px solid #452017; box-shadow: 0 0 1px black;
+    margin: 0 4px; cursor: default;
+    &>* { margin-left: 5px; }
+  }
+  div.placeholder, #stateholder {
+    font-size: 0.8em; color: #ddab76;
+    &.placeholder:not(:last-child) {display:none}
+  }
+}
