--- a/templates/ajax/soul/users_list.html.twig
+++ b/templates/ajax/soul/users_list.html.twig
@@ -1,13 +1,23 @@
 {% block ajax %}
-    {% for user in users %}
-        {% set var_content = null %}
-        {% if var == 'pm_add_users' %}
-            {% set var_content = path('pm_conv_group_user_add', {gid: gid, uid: user.id}) %}
-        {% endif %}
+    {% if single_entry and users|length > 1 %}
         <div class="users-list-entry">
-            <div x-soul-name="{{ user.name }}" x-soul-id="{{ user.id }}" x-soul-url="{{ route ? url(route, {id: user.id}) : '' }}" x-var="{{ var_content }}">
-                <div class="avatar small ua-{{ user.id % 10 }}"><img alt="" src="{{ user.avatar ? path('app_web_avatar', {'uid': user.id, 'name': user.avatar.smallName, 'ext': user.avatar.format}) : asset('build/images/forum/empty_avatar.gif') }}" style="margin-right: 0;"></div> {{ user.name }}
+            <div x-soul-group="{{ users|length }}" x-soul-name="{{ users|map(u => u.name)|join(',') }}" x-soul-id="{{ users|map(u => u.id)|join(',') }}">
+                <b>{{ 'Gruppe aus %num% Spielern'|trans({'%num%': users|length}, 'global') }}</b>
+                <div class="small">{{ users|map(u => u.name)|join(' ') }}</div>
+
             </div>
         </div>
-    {% endfor %}
+    {% else %}
+        {% for user in users %}
+            {% set var_content = null %}
+            {% if var == 'pm_add_users' %}
+                {% set var_content = path('pm_conv_group_user_add', {gid: gid, uid: user.id}) %}
+            {% endif %}
+            <div class="users-list-entry">
+                <div x-soul-name="{{ user.name }}" x-soul-id="{{ user.id }}" x-soul-url="{{ route ? url(route, {id: user.id}) : '' }}" x-var="{{ var_content }}">
+                    <div class="avatar small ua-{{ user.id % 10 }}"><img alt="" src="{{ user.avatar ? path('app_web_avatar', {'uid': user.id, 'name': user.avatar.smallName, 'ext': user.avatar.format}) : asset('build/images/forum/empty_avatar.gif') }}" style="margin-right: 0;"></div> {{ user.name }}
+                </div>
+            </div>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
