--- a/templates/ajax/ghost/intro.html.twig
+++ b/templates/ajax/ghost/intro.html.twig
@@ -78,12 +78,15 @@
                                         {% set found = true %}
                                         <div class="row town-row">
                                             <div class="padded cell rw-1"><span class="language"><img src="{{ asset("build/images/lang/" ~ town.getLanguage ~".png") }}" alt="{{ town.getLanguage }}" /></span></div>
-                                            <div class="padded cell rw-5">{% if town.password is not null %}<img src="{{ asset('build/images/item/item_lock.gif') }}" alt="Verrouillé" />{% endif %} {{ town.getName }}</div>
+                                            <div class="padded cell rw-5">{% if town.password is not null or town|whitelisted %}<span><img src="{{ asset('build/images/item/item_lock.gif') }}" alt="Verrouillé" /><div class="tooltip">
+                                                <div>{% if town.password %}{{ 'Diese Stadt ist durch ein Passwort geschützt.'|trans({},'ghost') }}{% endif %}</div>
+                                                <div>{% if town|whitelisted %}{{ 'Für diese Stadt gilt eine Platzreservierung.'|trans({},'ghost') }}{% endif %}</div>
+                                            </div></span>{% endif %} {{ town.getName }}</div>
                                             <div class="padded cell rw-2">{{ town.citizens|length }}/{{ town.population }}</div>
                                             <div class="padded cell rw-1 center"><img x-town-details="{{ town.id }}" x-town-toggle="{{ town.id }}" class="pointer" alt="+" src="{{ asset('build/images/icons/small_more.gif') }}" /><div class="tooltip help">{{ 'Die Liste der eingeschriebenen Spieler ansehen.'|trans({},'game') }}</div></div>
                                             <div class="padded cell rw-3">
                                                 {% if cdm_level != 2 %}
-                                                    <button {% if joinable %}x-town-lang="{{ town.getLanguage }}" x-town-id="{{ town.id }}" x-town-name="{{ town.getName }}" x-town-locked="{% if town.password is not null %}1{% else %}0{% endif %}" {% else %}disabled="disabled" title="{{ 'Deine Seele genügt den Anforderungen für diesen Stadttypen.'|trans({}, 'ghost') }}"{% endif %}>{% trans from 'ghost' %}Beitreten{% endtrans %}</button>
+                                                    <button {% if joinable and (not town|whitelisted or town|whitelisted(app.user)) %}x-town-lang="{{ town.getLanguage }}" x-town-id="{{ town.id }}" x-town-name="{{ town.getName }}" x-town-locked="{% if town.password is not null %}1{% else %}0{% endif %}" {% else %}disabled="disabled" title="{{ 'Deine Seele genügt den Anforderungen für diesen Stadttypen.'|trans({}, 'ghost') }}"{% endif %}>{% trans from 'ghost' %}Beitreten{% endtrans %}</button>
                                                 {% endif %}
                                             </div>
                                             <div x-town-details="{{ town.id }}" class="padded cell rw-12 hidden" style="background-color: #3b3249;">
