Improved a little design of description

--- a/templates/ajax/soul/me.html.twig
+++ b/templates/ajax/soul/me.html.twig
@@ -105,7 +105,7 @@
                 </div>
             {% endif %}
             {% if user_desc %}
-                <div class="personal_desc"><div>{{ 'Persönliche Beschreibung' }}</div><div>"{{ user_desc|raw }}"</div></div>
+                <div class="personal_desc"><div>{{ 'Persönliche Beschreibung' }}</div><div>« {{ user_desc|raw }} »</div></div>
             {% endif %}
 
             <div class="town-history">
