--- a/templates/ajax/soul/town_list.html.twig
+++ b/templates/ajax/soul/town_list.html.twig
@@ -40,7 +40,7 @@
                     {% endif %}
                     {{ incarnation.town.name }}
                 </div>
-                <div x-town-id="{{ incarnation.id }}" class="comment {% if not editable %}read-only{% else %}pointer{% endif %}"><em>{% if not incarnation.comment is empty %}{{incarnation.comment}}{% elseif editable %}<span class="add-comment">{{'Einen Kommentar hinzufügen'|trans({}, 'soul')}}</span>{% endif %}</em></div>
+                <div x-town-id="{{ incarnation.id }}" class="comment {% if not editable %}read-only{% else %}pointer{% endif %}"><em>{% if not incarnation.comment|trim is empty %}{{incarnation.comment}}{% elseif editable %}<span class="add-comment">{{'Einen Kommentar hinzufügen'|trans({}, 'soul')}}</span>{% endif %}</em></div>
             </div>
             <div class="cell padded rw-2 center town-days bold">
                 {{ incarnation.day }}
