--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -114,7 +114,7 @@
     background: url('../../img/forum/rp.png') left top no-repeat;
     height: 27px; padding-left: 24px; display: block;
     font-style: italic; font-size: 1.25rem;
-    font-weight: bold;
+    font-weight: bold; clear: left;
   }
 
   .rpText {
