Fix PM window display glitch

--- a/templates/ajax/pm/view.html.twig
+++ b/templates/ajax/pm/view.html.twig
@@ -43,7 +43,7 @@
             <div class="row-flex vertical stretch full-height">
                 <div id="pm-mobile-back-button" class="forum-control hide-desktop hide-lg hide-md center pointer" style="font-size: 2em; margin-bottom: 10px;"><img src="{{ asset('build/images/icons/small_prev.gif') }}" alt="<-"></div>
 
-                <div id="pm-forum-actions-container" class="cell rw-12 grow-0 hidden" style="padding-bottom: 10px;">
+                <div id="pm-forum-actions-container" class="cell grow-0 hidden" style="padding-bottom: 10px;">
                     <div class="forum-control">
                         <div class="forum-header-bar">
                             <b><i class="fa fa-caret-right"></i> {{ 'Diese Konversation'|trans({},'global') }}</b>
@@ -78,14 +78,14 @@
                     </div>
                 </div>
 
-                <div id="pm-user-list-container" class="cell rw-12 hidden" style="padding-bottom: 10px">
+                <div id="pm-user-list-container" class="cell hidden" style="padding-bottom: 10px">
                     <div class="forum-note">
                         <b>{{ 'Teilnehmer'|trans({},'global') }}</b>
                         <div id="pm-user-list-payload"></div>
                     </div>
                 </div>
 
-                <div id="pm-forum-editor-container" class="cell rw-12 hidden" style="padding-bottom: 10px">
+                <div id="pm-forum-editor-container" class="cell hidden" style="padding-bottom: 10px">
                     <div class="forum-note">
                         <b id="pm-forum-editor-header"></b>
                         <div id="pm-new-thread-controls" class="hidden">
@@ -115,7 +115,7 @@
                     </div>
                 </div>
 
-                <div id="gpm-forum-content-container" class="cell rw-12">
+                <div id="gpm-forum-content-container" class="cell">
                     <div class="forum-note">
                         <b id="gpm-forum-content-header">{{ 'Bitte wähle eine Konversation auf der linken Seite.'|trans({},'global') }}</b>
 
