--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -23,7 +23,7 @@
                     {% endfor %}
                 </ul>
             {% else %}
-                <span>{{ text_missing }}</span>
+                <span>{{ text_missing|raw }}</span>
             {% endif %}
             {% if close_button %}
                 <div class="right"><span x-close-for="{{ target_for }}">{{ 'Schließen'|trans({},'global') }}</span></div>
@@ -44,6 +44,9 @@
                         {% if entry.targets is not null and not entry.crossed %}
                             {% if entry.target_mode in [2,3,4,5] %}
                                 {{ _self.target_popup( entry.id, entry.item.id, entry.targets|sort((a,b) => a[1] <=> b[1]), entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
+                            {% elseif entry.target_mode == 6 %}
+                                {% set target_poison = 'can_poison'|items|map(i => '<span class="highlight"><img src="' ~ asset('build/images/item/item_' ~ i.icon ~ '.gif')  ~ '" alt="">' ~ i.label|trans({},'items') ~ '</span>') %}
+                                {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du hast nichts, womit du %poison% kombinieren kannst. Du benötigst einen der folgenden Gegenstände:<br />%list_head% oder %list_tail%.'|trans({'%poison%': '<span class="highlight"><img src="' ~ asset('build/images/item/item_' ~ entry.item.prototype.icon ~ '.gif')  ~ '" alt="">' ~ entry.item.prototype.label|trans({},'items') ~ '</span>', '%list_head%': target_poison|slice(0,-1)|join(', '), '%list_tail%': target_poison|slice(-1,1)|join(', ')},'game')|raw, true, false, entry.action.confirm, entry.action.confirmMsg ) }}
                             {% else %}
                                 {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg ) }}
                             {% endif %}
