Add grunge effect below tab bars

--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -114,7 +114,7 @@ div.tooltip.badge-tooltip {
 
     .night {
         width: auto; height: 230px; position: relative; font-size: 0; background: url("../../img/soul/soul_night.jpg") no-repeat right top;
-        background-size: cover;
+        background-size: cover; margin-top: -1px;
 
         &>.badge-title {
           font-size: 1.2rem; margin-top: 24px; backdrop-filter: blur(3px); -webkit-backdrop-filter: blur(3px);
