--- a/templates/ajax/soul/news.html.twig
+++ b/templates/ajax/soul/news.html.twig
@@ -4,7 +4,7 @@
     {{ parent() }}
 {% endblock %}
 {% block soul_content %}
-    <div id="news_anchor"></div>
+    <div id="news_anchor" style="position: relative"></div>
 {% endblock %}
 {% block js %}
     {{parent()}}
