--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1043,8 +1043,10 @@ span.defense-broken,div.defense-broken { .icon_div("../img/icons/small_def_broke
   font-size: 1.2rem; color: #ddab76; border-bottom: 1px solid #ddab76;
   margin-bottom: 20px; padding: 0 5px; position: relative; top: -2px; margin-left: -2px;
   &:not(.plain) {
+    overflow: visible; border-bottom: 1px solid transparent;
     background: url(../img/background/box/panel_00.png) -6px -7px no-repeat, url(../img/background/box/panel_02.png) right -4px top -7px no-repeat, url(../img/background/tabs-header.jpg) left / cover;
-    &::after { position: absolute; content: " "; top: 0; left: 27px; right: 28px; height: 3px; background: url(../img/background/box/panel_01.png) 0 -6px repeat-x; }
+    &::before { position: absolute; content: " "; top: 0; left: 27px; right: 28px; height: 3px; background: url(../img/background/box/panel_01.png) 0 -6px repeat-x; }
+    &::after { position: absolute; content: " "; bottom: -55px; top: 100%; left: 5px; right: 2px; background: url(../img/background/below_tabs_bg.gif) left top repeat-x; }
   }
   &.plain { background: url(../img/background/tabs-header-plain.gif) bottom left no-repeat; }
 
