--- a/templates/ajax/game/town/bank.html.twig
+++ b/templates/ajax/game/town/bank.html.twig
@@ -34,7 +34,7 @@
                     <div class="tooltip">{{ 'Diebstahlsversuche können nur <strong>während der Nacht</strong> unternommen werden: Sie haben eine reduzierte Erfolgschance und jeder Fehlschlag wird im Register vermerkt!'|trans({},'game')|raw }}</div>
                 </button>
                 <div id="night-mode-box" class="hidden">
-                    <div class="help">{{ 'Wähle einen Gegenstand aus der Bank aus...' }}</div>
+                    <div class="help">{{ 'Wähle einen Gegenstand aus der Bank aus...'|trans({},'game') }}</div>
                     <button id="night-steal-abort-button">{{ 'Abbrechen'|trans({},'global') }}</button>
                 </div>
             {% endif %}
